# renshuu-activity-tracker

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: settings.py
scripts/: fetch_data.py  generate_plots.py  renshuu_fetch.py  run_daily.py  run_daily.sh
src/: data_fetcher.py  data_processor.py  visualizer.py
